--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,9 +1,34 @@
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+
+<style>
+    table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+    }
+    </style>
+
+
 <h1>{{ question.question_text }}</h1>
 
-<ul>
-{% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-{% endfor %}
-</ul>
+<table style="width:100%">
+    <tr>
+      <th>choice</th>
+      <th>vote</th> 
+    </tr>
+    {% for choice in question.choice_set.all %}
+    <tr>
+        <th>
+            {{ choice.choice_text }}
+        </th>
+        <th>
+            {{ choice.votes}}
+        </th>
+    </tr>
+    {% endfor %}
+  </table>
 
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+
+<a href="{% url 'polls:detail' question.id %}">Vote again?</a><br>
+<a href="/polls">Back to main page</a>
