--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -2,11 +2,14 @@
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
+{% if question.can_vote %}
 <form action="{% url 'polls:vote' question.id %}" method="post">
-{% csrf_token %}
-{% for choice in question.choice_set.all %}
+    {% csrf_token %}
+    {% for choice in question.choice_set.all %}
     <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
     <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
-{% endfor %}
-<input type="submit" value="Vote">
+    {% endfor %}
+    <input type="submit" value="Vote">
 </form>
+{% endif %}
+<a href="/polls">Back to main page</a>
