--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,13 +1,18 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
     <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+        {% if question.can_vote %}
+        <a href="{% url 'polls:index' %}">Vote</a>
+        {% else %}
+        Vote
+        {% endif %}
+        <a href="{% url 'polls:results' question.id %}">Result</a>
     {% endfor %}
     </ul>
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
-
-{% load static %}
-
-<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
