--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -21,9 +21,7 @@
     <tr>
         <th>
             {{ choice.choice_text }}
-        </th>
-        <th>
-            {{ choice.votes}}
+            {{ choice.votes_set.count}}
         </th>
     </tr>
     {% endfor %}
