--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -4,7 +4,7 @@
 <h2>Logged out</h2>
 
 Want to logging in again?
-<a href="{% url 'login' %}">Login</a>
+<a href="{% url 'polls:logout' %}">Login</a>
 
 </body>
 </html>
