--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,3 +1,6 @@
+
+<body>
+Welcome {{ user.username }}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 
@@ -17,3 +20,4 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+</body>
